@@ -5,16 +5,20 @@ import gt.com.megatech.service.assembler.GuardianModelAssembler;
 import gt.com.megatech.service.interfaces.IGuardianService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PagedResourcesAssembler;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.IanaLinkRelations;
+import org.springframework.hateoas.PagedModel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
@@ -26,6 +30,7 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 public class GuardianController {
 
     private final GuardianModelAssembler guardianModelAssembler;
+    private final PagedResourcesAssembler<GuardianDTO> guardianDTOPagedResourcesAssembler;
     private final IGuardianService iGuardianService;
 
     @PreAuthorize("hasAuthority('READ')")
@@ -34,11 +39,27 @@ public class GuardianController {
         List<EntityModel<GuardianDTO>> guardians = this.iGuardianService.findAllGuardians()
                 .stream()
                 .map(guardianModelAssembler::toModel)
-                .collect(Collectors.toList());
+                .toList();
         return CollectionModel.of(
                 guardians,
                 linkTo(methodOn(GuardianController.class).findAllGuardians()).withSelfRel()
         );
+    }
+
+    @PreAuthorize("hasAuthority('READ')")
+    @GetMapping("/paged")
+    public ResponseEntity<PagedModel<EntityModel<GuardianDTO>>> findAllGuardiansPaged(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size,
+            Pageable pageable
+    ) {
+        Pageable customPageable = PageRequest.of(page, size, pageable.getSort());
+        Page<GuardianDTO> guardianDTOPage = this.iGuardianService.findAllGuardiansPaged(customPageable);
+        PagedModel<EntityModel<GuardianDTO>> entityModelPagedModel = guardianDTOPagedResourcesAssembler.toModel(
+                guardianDTOPage,
+                guardianModelAssembler
+        );
+        return ResponseEntity.ok(entityModelPagedModel);
     }
 
     @PreAuthorize("hasAuthority('READ')")
@@ -47,11 +68,27 @@ public class GuardianController {
         List<EntityModel<GuardianDTO>> guardians = this.iGuardianService.findAllGuardiansWithStudents()
                 .stream()
                 .map(guardianModelAssembler::toModel)
-                .collect(Collectors.toList());
+                .toList();
         return CollectionModel.of(
                 guardians,
                 linkTo(methodOn(GuardianController.class).findAllGuardiansWithStudents()).withSelfRel()
         );
+    }
+
+    @PreAuthorize("hasAuthority('READ')")
+    @GetMapping("/paged-with-students")
+    public ResponseEntity<PagedModel<EntityModel<GuardianDTO>>> findAllGuardiansWithStudentsPaged(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size,
+            Pageable pageable
+    ) {
+        Pageable customPageable = PageRequest.of(page, size, pageable.getSort());
+        Page<GuardianDTO> guardianDTOPage = this.iGuardianService.findAllGuardiansWithStudentsPaged(customPageable);
+        PagedModel<EntityModel<GuardianDTO>> entityModelPagedModel = guardianDTOPagedResourcesAssembler.toModel(
+                guardianDTOPage,
+                guardianModelAssembler
+        );
+        return ResponseEntity.ok(entityModelPagedModel);
     }
 
     @PreAuthorize("hasAuthority('READ')")
@@ -70,7 +107,7 @@ public class GuardianController {
 
     @PreAuthorize("hasAuthority('CREATE')")
     @PostMapping
-    public ResponseEntity<?> saveGuardian(@RequestBody @Valid GuardianDTO guardianDTO) {
+    public ResponseEntity<EntityModel<GuardianDTO>> saveGuardian(@RequestBody @Valid GuardianDTO guardianDTO) {
         EntityModel<GuardianDTO> guardianDTOEntityModel = guardianModelAssembler
                 .toModel(this.iGuardianService.saveGuardian(guardianDTO));
         return ResponseEntity
@@ -80,7 +117,7 @@ public class GuardianController {
 
     @PreAuthorize("hasAuthority('UPDATE')")
     @PutMapping("/{id}")
-    public ResponseEntity<?> updateGuardian(@PathVariable Long id, @RequestBody @Valid GuardianDTO guardianDTO) {
+    public ResponseEntity<EntityModel<GuardianDTO>> updateGuardian(@PathVariable Long id, @RequestBody @Valid GuardianDTO guardianDTO) {
         EntityModel<GuardianDTO> guardianDTOEntityModel = guardianModelAssembler
                 .toModel(this.iGuardianService.updateGuardian(id, guardianDTO));
         return ResponseEntity
